--- a/templates/index.html
+++ b/templates/index.html
@@ -9,24 +9,24 @@
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
     <!--Let browser know website is optimized for mobile-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
     <style type="text/css">
-    body{
-    	/*background: url("../static/images/office.jpg")  no-repeat center top fixed;
-    	background-size: cover;*/
-    	background: 
-	    /* top, transparent red, faked with gradient */ 
-	    linear-gradient(
-	      rgba(0, 0, 0, 0.3), 
-	      rgba(0, 0, 0, 0.3)
-	    ),
-	    /* bottom, image */
-	    url("../static/images/office.jpg");
-	    background-size: cover;
-	    background-repeat: no-repeat;
-	    background-position: center;
-	    background-attachment: fixed;
-	    color: white;
-    }
+	    body{
+	    	/*background: url("../static/images/office.jpg")  no-repeat center top fixed;
+	    	background-size: cover;*/
+	    	background:  
+		    linear-gradient(
+		      rgba(0, 0, 0, 0.4), 
+		      rgba(0, 0, 0, 0.4)
+		    ),
+		    /* bottom, image */
+		    url("../static/images/office.jpg");
+		    background-size: cover;
+		    background-repeat: no-repeat;
+		    background-position: center;
+		    background-attachment: fixed;
+		    color: white;
+	    }
     	.header{
     		color:#3e2723 ;
     		font-weight: 300;
@@ -86,8 +86,19 @@
 	 	</div>
 	 </div>
 	 <div class="row">
-	 	<div class="col s7 offset-s1">
+	 	<div class="col s8 offset-s1">
 	 		<img src="" id="image" class="materialboxed responsive-img">
+	 		{{ cntxt|safe }}
+	 		<!-- {% if graph %}
+			<div style="width:600;height:500">
+			{{ graph|safe }}
+			</div>
+			{% endif %} -->
+	 	</div>
+	 	<div class="col s2">
+	 		<blockquote>
+		      Click on the legend for comparison.
+		    </blockquote>
 	 	</div>
 	 </div>
 	<!--Import jQuery before materialize.js-->
@@ -95,6 +106,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
 	<!-- <center><h1>this is heading</h1></center> -->
 <script type="text/javascript">
+
 $(document).ready(function() {
   	$('select').material_select();
 });
